qicharts2 0.5.9999
===============
* Allow NULL as title argument in paretochart (thanks to Andrew Hill).
* Fix c4() for large n (thanks to pwildenhain for the bug report and Tore Wenzel-Larsen for the fix).
* Hide line labels for Inf values.
* Fix baseline centre line in G charts (when using freeze argument).

qicharts2 0.5.1
===============
* Fix missing target line.
* Use exact values for control chart constants A3, B3, and B4 (thanks to Tore Wenzel-Larsen).
* Add x.period argument specifying interval cut points for aggregating y values by week, month, etc. (thanks to pwildenhain)
* P charts default to percentage on Y axis (thanks to pwildehain).
* Add qic.linecol, qic.signalcol, and qic.targetcol to options to allow for custom colours.
* Add qic.clshade to options to allow for choosing between lines and shaded area for control limits.
* Fix typos in vignette (thanks to rmadillo).
* Add source to cabg and gtt datasets.

qicharts2 0.4.0
===============
* Fix quoted variables.
* Darker CL background.
* Add point.size argument.
* Improved notes and parts labels.

qicharts2 0.3.0
===============
* Skip more tests that generate noLD issues on CRAN.
* Allow NULL as title argument to suppress chart title.
* Add strip.horizontal argument to qic().

qicharts2 0.2.3
===============
* Skip tests that generate noLD issues on CRAN.

qicharts2 0.2.2
===============
* Fix time zone warnings on Windows environment.

qicharts2 0.2.1
===============
* Fix x axis error when dates crosses summer/winter time.

qicharts2 0.2.0
===============
* Import dplyr >= 0.7.0
* Fix calculation of control limits for xbar chart in qic() with freeze or 
  exclude argument.
* C chart ignores agg.fun argument.

qicharts2 0.1.1
===============
* First release.